Add CreatedAt fields to HTTP layer (#45)
